# hack_u_team4

./: .gitignore  AGENTS.md  CLAUDE.md  Procfile  README.md  pyproject.toml  render.yaml
backend/: .gitignore  README.md  pyproject.toml  questions.yaml  sample_answer_logs.tsv  sample_logs.yaml  sample_questions.tsv  sample_users.tsv  sample_users.yaml  seed.py
backend/app/: database.py  main.py  models.py  questions.yaml  schemas.py
backend/app/routers/: answer_logs.py  questions.py  rating.py  users.py  virus.py
docs/: Question_authoring_policy.md  api_spec_and_flow.md  linux_command_summary.md  virus_feature.md
frontend/: .env.public  README.md  pyproject.toml
frontend/linux_virus_frontend/: app.py  config.py  controller.py  events.py  input_blocker.py  keyboard.py  mac_window.py  permissions.py  state.py  web_bridge.py
frontend/linux_virus_frontend/web/: api.js  app.js  blocking_overlay.html  config.js  default.html  drag.js  index.html  markdown.js  overlay_noise.html  quiz.html  quiz.js  settings.js  sound.js  storage.js  style.css  timer.js  user.js
frontend/linux_virus_frontend/web/styles/: base.css  minimized.css  quiz.css  settings.css  virus.css
frontend/resident_poc/: __init__.py  controller.py  state.py  web_bridge.py
frontend/resident_poc/web/: app.js
src/mac_resident_poc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/resident_poc/: app.py  config.py  controller.py  events.py  keyboard.py  mac_window.py  permissions.py  state.py
src/resident_poc/web/: app.js  index.html  style.css
