[project]
name = "linux-virus-backend"
version = "0.1.0"
description = "FastAPI backend for Linux Virus."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]",
    "psycopg2-binary>=2.9",
    "python-dotenv",
    "uvicorn",
    "sqlalchemy>=2.0",
]

[tool.uv]
package = false
