[project]
name = "linux-virus-frontend"
version = "0.1.0"
description = "macOS resident frontend for Linux Virus with a floating icon, global hotkey, and keyboard tracking."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.0.0",
    "pyobjc-framework-ApplicationServices>=12.1",
    "pyobjc-framework-Cocoa>=12.1",
    "pyobjc-framework-WebKit>=12.1",
]

[project.scripts]
linux-virus-frontend = "linux_virus_frontend.app:main"

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "ty>=0.0.1a8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ty.rules]
unresolved-import = "ignore"

[tool.setuptools.package-data]
linux_virus_frontend = ["web/*", "image/*"]
